<resources>
    <string name="app_name">MOLL Controller</string>



    <string name="title_auto">自動探索</string>
    <string name="title_manual">コントローラ</string>
    <string name="title_settings">設定</string>
    <string name="title_activity_license">ライセンス情報</string>

    <string name="title_moll">MOLL</string>
    <string name="title_tag">BLEタグ</string>

    <string name="title_device_list">デバイス一覧</string>
    <string name="title_device_data">デバイス情報</string>

    <string name="title_device_name">デバイス名</string>
    <string name="title_device_address">アドレス</string>
    <string name="title_device_type">デバイスタイプ</string>

    <string name="title_rssi">信号強度</string>
    <string name="title_distance">距離</string>

    <string name="title_activity_settings">設定</string>
    
    <string name="title_common_settings">共通設定</string>
    <string name="title_scan_period">デバイスの検索時間</string>
    <string name="title_velocity">速度(PWM)</string>
    <string name="title_velocity_individual">速度を左右個別に設定する</string>
    <string name="title_velocity_left">左側の速度(PWM)</string>
    <string name="title_velocity_right">右側の速度(PWM)</string>
    <string name="title_sensor_threshold">赤外線センサの閾値</string>
    <string name="title_back_period">回避の後退時間</string>
    <string name="title_turn_period">回避の転回時間</string>

    <string name="title_auto_settings">自動探索の設定</string>
    <string name="title_turn_degree">転回角度</string>
    <string name="title_interval">通信強度の更新間隔</string>
    <string name="title_histories">参照する通信強度の履歴</string>
    <string name="title_search_end_threshold">探索終了判定の閾値</string>
    <string name="title_notification">通知音</string>

    <string name="title_other">その他</string>
    <string name="title_about_moll_controller">MOLL Controllerについて</string>
    <string name="title_license">ライセンス情報</string>
    <string name="title_open_source_license">オープンソースライセンス</string>
    <string name="title_creative_commons_license">クリエイティブ・コモンズ・ライセンス</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="message_no_bluetooth">Bluetoothデバイスが存在しません</string>
    <string name="message_device_not_found">デバイスが見つかりませんでした</string>
    <string name="message_search_start">BLEタグ(%s)の探索を開始します</string>
    <string name="message_search_started">探索を開始しました</string>
    <string name="message_search_abort">BLEタグ(%s)の探索を中止しますか?</string>
    <string name="message_search_aborted">探索を中止しました</string>
    <string name="message_found">BLEタグ(%s)を発見しました</string>

    <string name="message_disconnected">切断しました</string>
    <string name="message_connected">接続しました</string>
    <string name="message_fault">なにかがおかしいよ</string>

    <string name="action_settings">設定</string>

    <string name="action_ok">OK</string>
    <string name="action_rescan">再検索</string>
    <string name="action_connect">接続</string>
    <string name="action_start">開始</string>
    <string name="action_abort">中止</string>

    <string name="action_cancel">キャンセル</string>
    <string name="action_retry">リトライ</string>

    <string name="action_searching">検索中です</string>

    <string name="status_not_setting">未設定</string>
    <string name="status_connected">接続</string>
    <string name="status_disconnected">切断</string>

    <string name="text_no_ringtone">なし</string>
    <string name="text_default_ringtone_title">既定(%s)</string>

    <string name="unit_second">秒</string>
    <string name="unit_milli_second">ミリ秒</string>
    <string name="unit_degree">度</string>
    <string name="unit_times">回</string>
    <string name="unit_decibel">dB</string>

    <string name="device_type_classic">DEVICE TYPE CLASSIC</string>
    <string name="device_type_le">DEVICE TYPE LE</string>
    <string name="device_type_dual">DEVICE TYPE DUAL</string>
    <string name="device_type_unknown">DEVICE_TYPE_UNKNOWN</string>

</resources>
