<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/title_device_name"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="bottom"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        tools:text="Null"
        android:id="@+id/name_text_view"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/title_device_address"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="bottom"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        tools:text="Null"
        android:id="@+id/address_text_view"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="@string/title_device_type"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="bottom"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        tools:text="Null"
        android:id="@+id/type_text_view"
        android:textColor="?android:attr/textColorPrimary" />

</LinearLayout>