<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="8dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:id="@+id/icon_image_view"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_action_bluetooth_disabled"
        android:tint="@color/material_gray_light"
        android:layout_rowSpan="2"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_text_view"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="?android:attr/textColorPrimary"
        tools:text="Null"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_text_view"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginBottom="16dp"
        android:textSize="14sp"
        android:text="@string/status_not_setting" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginRight="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/status_disconnected"
            android:id="@+id/status_text_view"
            android:textSize="14sp"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_weight="1" />

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connection_switch"
            android:enabled="false" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="right"
        android:text="@string/action_settings"
        android:id="@+id/settings_button"
        android:layout_margin="8dp"
        style="@style/CardViewRaisedButtonButton"/>
</GridLayout>