<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:weightSum="1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" >
                <jp.ac.gunma_ct.elc.mollcontroller.DeviceView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:title="@string/title_moll"
                    android:id="@+id/moll_device_view"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp" >

                <LinearLayout android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:id="@+id/tag_device_layout" >

                    <jp.ac.gunma_ct.elc.mollcontroller.DeviceView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:title="@string/title_tag"
                        android:id="@+id/tag_device_view"/>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:id="@+id/status_layout" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:text="@string/title_rssi"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:gravity="bottom"
                            android:textColor="?android:attr/textColorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            tools:text="Null"
                            android:id="@+id/rssi_text_view"
                            android:textSize="14sp"
                            android:textColor="?android:attr/textColorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:text="@string/title_distance"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:gravity="bottom"
                            android:textColor="?android:attr/textColorPrimary" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            tools:text="Null"
                            android:id="@+id/distance_text_view"
                            android:textSize="14sp"
                            android:textColor="?android:attr/textColorPrimary" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
